configs/kuber/nginx.yaml
# Ingress for raycluster
# WARNING: Nginx must handle authentcation/access control. The Ray Dashboard provides 
# read and write access to the cluster. Anyone with access through Nginx can launch
# arbitrary code execution on the Ray Cluster.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # Any characters captured by (.*) will be assigned to the placeholder $1, which is then used as a parameter in the rewrite-target annotation
    # For example, the ingress definition above will result in the following rewrites:
    # $IP/$CLUSTER_NAME/ rewrites to $IP/ ($1 maps to nothing)
    # $IP/$CLUSTER_NAME/#/actors rewrites to $IP/#/actors ($1 maps to #/actors)
    # $IP/$CLUSTER_NAME/#/node rewrites to $IP/#/node ($1 maps to #/node)
  name: credit-scoring-system-head-ingress
  namespace: default
spec:
  ingressClassName: nginx # This should be algined with the ingress-class of the ingress controller
  rules:
  - http:
      paths:
      - backend:
          service:
            name: credit-scoring-system-head-svc # service name should be the same as head service
            port: # port number should match the port specified for dashboard in the RayCluster setting above
              number: 8265
        path: /raycluster-ingress/(.*) # (.*) is regex
        pathType: Exact # Matches the URL path exactly and with case sensitivity.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-cluster-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    # See `ingress.md` for more details about how to choose subnets.
    alb.ingress.kubernetes.io/subnets: subnet-d9d4ff92, subnet-0c0209db843c9fd72
    alb.ingress.kubernetes.io/target-type: ip
    # Health Check Settings. Health check is needed for
    # ALB to route traffic to the healthy pod.
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /-/routes
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: credit-scoring-system-serve-svc # Serve service
                port:
                  number: 8000 # default HTTP port number for serving requests
